--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.7",
+    "i18next": "^23.11.3",
     "next": "14.1.4",
+    "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.1",
     "tailwind-merge": "^2.2.2",
     "vanilla-tilt": "^1.8.1"
   },
