--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.17.0"
   }
 }
